# XBall

./: .gitignore
client/: CMakeLists.txt  main.cpp
client/Assets/: CoordsGetter.cs  GameInit.cs  InputManager.cs  PlayerScript.cs  SayingHello.cs  SocketConnection.cs  SteamTest.cs  UnityMainThreadDispatcher.cs  Utils.cs
client/Assets/Game/: BallScript.cs  CameraController.cs  GameConstants.cs  GameEntities.cs  GameInit.cs  InputGetter.cs  InputProcessor.cs  PlayerScript.cs  Utils.cs
client/Assets/Menu/: InviteManager.cs  MainMenu.cs
client/Assets/NetWork/: RequestCreator.cs  SocketConnection.cs
client/Assets/Resources/: Skin_blue.prefab  dick.prefab
client/Assets/Resources/Materials/: Blue.mat  Brown.mat  HighlightGreen.mat  Red.mat
client/Assets/Resources/Skins/: Field_test.fbx  Field_test.prefab  Skin_blue.fbx  Skin_blue_Y_up.fbx  Skin_blue_Y_up.prefab  Skin_red.fbx  Skin_red_4.fbx  Skin_red_4.prefab  Sphere.prefab
client/Assets/Scenes/: GameScene.unity  MenuScene.unity  SampleScene.unity  Test2D.unity  Test3D.unity
client/Assets/Steam/: SteamManager.cs
client/Assets/StreamingAssets/: log4net.xml
client/Assets/src/: DontDestroy.cs  ServerManager.cs
client/My project (1)/Assets/: CoordsGetter.cs  NewBehaviourScript.cs  NewPlayableBehaviour.cs  SocketConnection.cs
client/My project (1)/ProjectSettings/: ProjectSettings.asset  TagManager.asset
client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
client/UserSettings/: EditorUserSettings.asset
client/UserSettings/Layouts/: default-2021.dwlt
(+137 files in other folders)
